# mia-vpc3

./: .gitignore  Informe técnico de correcciones.txt  README.md  TPVisionComputerIII.ipynb  TP_final_vision_por_computadora_3 (20-3-2026).ipynb  TP_final_vision_por_computadora_3 (21-3-2026).ipynb  TP_final_vision_por_computadora_3 (Ultima version).ipynb  pyproject.toml
notebooks/: 1- desarrollo (Antes de la correccion).ipynb  1-inicial.ipynb  2 - informe técnico de correcciones.md  6- agregado metricas (23-3-2026).ipynb  6- desarrollo sweep wandb (23-3-2026).ipynb  7- fixes sobre metricas (24-3-2026).ipynb  8- test script en colab.ipynb  9- comparacion YOLO.ipynb  TP_final_vision_por_computadora_3.ipynb
runs/detr_deeppcb_suite_20260322_151016/: suite_summary.json
runs/detr_deeppcb_suite_20260322_151016/overnight_lr_5e5_bb_1e5/: config.json  history.csv
runs/detr_deeppcb_suite_20260326_102010/: suite_summary.json
runs/detr_deeppcb_suite_20260326_102010/overnight_lr_3e5_bb_1p5e5/: best_eval_artifacts.json  config.json  history.csv  history.json  last_eval_artifacts.json  per_class_history.json  summary.json
scripts/: config.py  config_example.yaml  data.py  evaluate.py  model.py  plot_results.py  run_experiment.py  run_suite.py  suite_config_example.yaml  train.py  utils.py
tests/: test_data.py  test_model.py  test_utils.py
